# jmpxx

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  REUSE.toml  SECURITY.md  conanfile.py
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt
benchmarks/bench/: main.cpp
benchmarks/fixtures/: ship_handwritten.cpp  ship_jmpxx.cpp
benchmarks/fixtures/known_bad/: instantiation_heavy.cpp  ship_bloated.cpp
benchmarks/kernels/: boost_support.cpp  kernel_errorcode.cpp  kernel_exceptions.cpp  kernel_expected.cpp  kernel_handwritten.cpp  kernel_jmpxx.cpp  kernel_jmpxx_slow.cpp  kernel_leaf.cpp  kernel_outcome.cpp  kernel_tlexpected.cpp  kernels.hpp  spec.hpp
cmake/: compile_check.cmake  jmpxxConfig.cmake.in
docs/: README.md  comparison.md  cookbook.md  why-no-exceptions.md
docs/migration/: from-error-code.md  from-exceptions.md  from-expected.md
docs/reference/: abi.md  diagnostics.md  hardening.md  interop.md  lint.md  packaging.md  platform.md  policies.md  propagation-levels.md  reflect.md  unwind.md  verification.md
examples/: CMakeLists.txt  README.md  diagnostics.cpp  interop.cpp  policies.cpp  reflection.cpp  result_basics.cpp  unwind_arm.cpp
goldens/abi/: layout_lp64.txt
goldens/abi/known_bad/: layout_lp64.bad.txt
goldens/known_bad/: jx_value_return.bad.s
goldens/x86_64/: jx_error_return.s  jx_hand_branch.s  jx_propagate_eight.s  jx_try_branch.s  jx_value_return.s
include/jmpxx/: core.hpp  diagnostics.hpp  erased.hpp  interop.hpp  platform.hpp  reflect.hpp  unwind.hpp
include/jmpxx/core/: config.hpp  diagnostic_hook.hpp  error.hpp  propagation.hpp  transport.hpp
include/jmpxx/core/detail/: utility.hpp
include/jmpxx/diagnostic/: store.hpp
include/jmpxx/interop/: adapt.hpp  error_code.hpp  exception.hpp  expected.hpp
include/jmpxx/platform/: detect.hpp  trace.hpp  trap.hpp
include/jmpxx/unwind/: backend.hpp  escape.hpp
lint/: CMakeLists.txt  jmpxx_lint.cpp
lint/fixtures/: clean.cpp  violations.cpp
packaging/: amalgamate.py  amalgamate.sh
packaging/consumers/amalgamation/: CMakeLists.txt  main.cpp
packaging/consumers/subdir/: CMakeLists.txt  main.cpp
packaging/vcpkg/: portfile.cmake  vcpkg.json
reference_app/: CMakeLists.txt  README.md
reference_app/configs/: invalid_limits.toml  invalid_policy.toml  invalid_port.toml  missing_host.toml  valid.toml  values_cycle.toml  values_missing.toml  values_valid.toml
reference_app/src/: app_policy.hpp  config_bench.cpp  config_resolve.cpp  config_validate.cpp  limits_check.hpp  policy_check.hpp  resolve.hpp
single_include/: jmpxx-core.hpp  jmpxx.hpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
tests/: CMakeLists.txt
tests/abi/: layout_descriptor.cpp
tests/adversarial/: config_matrix.cpp  differential_oracle.cpp  exception_safety.cpp  model_lifecycle.cpp  msan_known_bad.cpp  msan_surface.cpp  portable_afl.cpp  portable_fuzz_driver.hpp  portable_libfuzzer.cpp  static_analysis_known_bad.cpp  static_analysis_public.cpp  structured_sequences.cpp  usage_scenarios.cpp
tests/asm_golden/fixtures/: policy_release.cpp  propagate_eight.cpp  try_branch.cpp  value_return.cpp
tests/asm_golden/known_bad/: rich_leaky.cpp  spilly.cpp
tests/compile_fail/: cf_discard.cpp  cf_ignore_site.cpp  cf_ok_propagate.cpp  cf_ok_use.cpp
tests/constexpr/: constexpr_tests.cpp
tests/doc_claim/known_bad/: propagation_levels.bad.md
tests/fence/known_bad/: leak_outside_fence.hpp
tests/freestanding/: fs_core.cpp
tests/fuzz/: fuzz_interop.cpp  fuzz_unwind.cpp
tests/hardening/: erased_null_domain.cpp  wrong_state_access.cpp
tests/interop/: boundary.cpp  decode_boundary.hpp  freestanding_expected.cpp  no_exceptions_cell.cpp  roundtrip.cpp
tests/monadic/: monadic_tests.cpp
tests/policy/: behavior.cpp  concurrent.cpp  erased_nortti.cpp  parity.cpp
tests/property/: property_tests.cpp
tests/reflect/: reflect_behavior.cpp
tests/scripts/: amalgamation_check.sh  callgrind_ir_gate.sh  config_matrix_check.sh  coverage_floor.py  doc_claim_check.sh  expect_command_failure.sh  expect_swallow_handled.sh  freestanding_check.sh  fuzz_check.sh  hardening_check.sh  include_boundary_check.sh  interop_freestanding_check.sh  lint_check.sh  msan_check.sh  mutation_campaign.py  platform_fence_check.sh  portable_fuzz_afl_check.sh  portable_fuzz_libfuzzer_check.sh  provision_msan_libcxx.sh  sanitizer_check.sh  sanitizer_diag_check.sh  static_analysis_check.sh  unwind_opt_in_check.sh
tests/static/: static_asserts.cpp
tests/unwind/: no_tables.cpp  swallow.cpp  unwind_exec.cpp
verify/: CMakeLists.txt  acceptance.py  main.cpp  reporter.hpp
